# fastapi-ca-0308

./: containers.py  main.py  pyproject.toml
database/: user.json
templates/: celebration.html  main.html
templates/email/: forgot_password.html
templates/user/: basic_login.html  forgot_password.html  signup.html
user/: description.txt
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
user/interface/views/: user_view.py
utils/: crypto.py  json_helper.py
